# Browser-Use-Ralph-Mode

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  agent.md  brainstorm.md  stream.html  stream.js
.browser-agent/: .gitignore
browser-use-agent/: .env.example  .gitignore  README.md  agent.py  langgraph.json  pyproject.toml  requirements.txt  server.py  test.py  test_form.html
browser-use-agent/artifacts/file_outputs/: agentic_skills_minimal.pptx
browser-use-agent/browser_use_agent/: __init__.py  bash_tool.py  browser_agent.py  configuration.py  human_loop.py  models.py  present_file.py  prompts.py  reflection.py  state.py  subagent_interrupt.py  tools.py  utils.py
browser-use-agent/browser_use_agent/memory/: __init__.py  diary.py  reflection.py  traces.py
browser-use-agent/browser_use_agent/middleware/: __init__.py  presented_files.py
browser-use-agent/browser_use_agent/skills/: __init__.py  loader.py
browser-use-agent/browser_use_agent/storage/: __init__.py  checkpoint.py  config.py  init.py
browser-use-agent/my-traces/: 019bda1f-5bda-7bc3-a76c-15d95dd1d279.json  019bda1f-9cd3-7482-a505-8d63bb787c36.json  019bda20-c95a-7e41-9a00-56d5c97b9a71.json  019bda24-0518-7771-aadd-6d85eac9975e.json  019bda2b-4003-7cb0-b74a-d93fe3673ba6.json  1f0f58c0-eaab-67c0-8e23-b785840969a2.json  1f0f58c3-1239-675e-9d61-d607b8957ce9.json  1f0f58d1-78de-60e6-b3a9-3b537600878c.json  1f0f58d2-d53a-6014-9cbd-90b813392f77.json  1f0f58d6-83dd-68e8-bf47-2e4e273b315f.json
browser-use-agent/tests/: __init__.py  test_browser_agent.py  test_models.py  test_present_file.py  test_prompts.py  test_reflection.py  test_subagent_status.py  test_tools.py
(+44 files in other folders)
